# SBS-Projects

./: .clang-format  .gitignore  README.md
3DMazeGenerator/: CMakeLists.txt
3DMazeGenerator/include/: maze3d.hh  maze3d_generator.hh  maze3d_renderer.hh  maze3d_solver.hh
3DMazeGenerator/src/: main.cpp  maze.cpp  maze3d.cpp  maze3d_generator.cpp  maze3d_renderer.cpp  maze3d_solver.cpp  maze_generator.cpp  maze_renderer.cpp
3DMazeGenerator/test/: test_3dgenerate_times.cpp  test_3dsolve_times.cpp  test_generate_times.cpp  test_maze.cpp  test_maze3d.cpp  test_solve_times.cpp
DesktopGarden/: CMakeLists.txt  ]
DesktopGarden/assets/music/: README.txt
DesktopGarden/assets/sprites/: House.aseprite
DesktopGarden/assets/sprites/ui/: FieldButtons.aseprite  Storage.aseprite
DesktopGarden/include/: audioPlayer.h  constants.h  effects.h  field.h  game.h  garden.h  inventorySystem.h  menu.h  moneySystem.h  plant.h  plantType.h  plantsData.h  settings.h  shop.h  storage.h  ui.h  winOverlay.h
DesktopGarden/shaders/: plant_sway.fs  plant_sway.vs
DesktopGarden/src/: audioPlayer.cpp  effects.cpp  field.cpp  game.cpp  garden.cpp  inventorySystem.cpp  main.cpp  menu.cpp  moneySystem.cpp  plant.cpp  plantsData.cpp  settings.cpp  shop.cpp  storage.cpp  ui.cpp  win_overlay.cpp
FallingSand/: CMakeLists.txt
FallingSand/src/: elementType.hh  main.cpp  particle.cpp  particle.hh  simulation.cpp  simulation.hh
Manim/MazeGeneration/: maze_gen.py
Manim/SandSimulation/: manim.cfg  sand_sim.py
MazeGenerator/: CMakeLists.txt
MazeGenerator/include/: maze.hh  maze_generator.hh  maze_renderer.hh  maze_solver.hh
MazeGenerator/src/: cell.hh  main.cpp  maze.cpp  maze.hh  maze_generator.cpp  maze_generator.hh  maze_renderer.cpp  maze_renderer.hh  maze_solver.cpp  maze_solver.hh  test.cpp
MazeGenerator/test/: test_generate_times.cpp  test_solve_times.cpp  test_times.cpp
RayLibTest/: CMakeLists.txt
RayLibTest/src/: main.cpp
SandSimulation/: .clang-format  CMakeLists.txt  sand_sim.py
SandSimulation/src/: elementType.cpp  elementType.hh  main.cpp  particle.hh  simulation.cpp  simulation.hh
SnakeRaylib/src/: main.cpp
SoftBodyPhysics/: CMakeLists.txt
SoftBodyPhysics/src/: ball.hh
SpringSimulation/: CMakeLists.txt
SpringSimulation/src/: ball.cpp  main.cpp
